Download files into a folder not a zip file

--- a/src/main/resources/de/maikmerten/bbbdownload/ui/Bundle.properties
+++ b/src/main/resources/de/maikmerten/bbbdownload/ui/Bundle.properties
@@ -2,11 +2,11 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-StartDownload=Please download the recording, thank you!
+StartDownload=Download the playback
 Control=Control
 SelectFile=Select file
-DefaultZip=bbb-downloaded-presentation.zip
-OutputZip=Output file (ZIP)
+DefaultZip=bbb-downloaded-presentation
+OutputZip=Output folder name
 ExampleUrl=https://bbb.example.com/playback/presentation/2.0/playback.html?meetingId=be50897f1e04b6a776f9341944723f4e0a1877ef-1582889656605
 ExampleForCorrectUrl=Example for a correct URL:
 PasteUrl=Paste from clipboard
